--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -553,5 +553,7 @@
     <!--to enable doze always on-->
     <bool name="config_enableDozeAlwaysOn">false</bool>
 
+    <!--bool for backlight options-->
+    <bool name="config_deviceHasButtonBacklight">true</bool>
 </resources>
 
